fix line wrapping (#126)

--- a/client/src/components/Problem/ProblemShow.css
+++ b/client/src/components/Problem/ProblemShow.css
@@ -12,5 +12,5 @@
 }
 
 .problemShow .description {
-  white-space: pre;
+  white-space: pre-wrap;
 }
